<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:numberpreference="http://schemas.android.com/apk/res/sr.player">
	
<PreferenceCategory android:title="@string/configCategories"/>	
	<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/rightNowInfoCategories"
	>
	<PreferenceCategory android:title="@string/rightNowInfoCategories"/>
	<sr.player.dialogs.NumberPreference
		android:key="rightNowInfoRetrievalRate"
	 	android:title="@string/rightNowInfoRetrievalRate"
	    android:summary="@string/rightNowInfoRetrievalRateSummary"
	    android:defaultValue="2"
	    numberpreference:min="0"
	    numberpreference:max="60"
	    /> 
	<sr.player.dialogs.NumberPreference
		android:key="rightNowInfoRetrievalPausedRate"
	 	android:title="@string/rightNowInfoRetrievalPausedRate"
	    android:summary="@string/rightNowInfoRetrievalPausedRateSummary"
	    android:defaultValue="30"
	    numberpreference:min="0"
	    numberpreference:max="2000"
	    /> 
	</PreferenceScreen>
	<CheckBoxPreference
		android:key="MediaButtonEnable"
	    android:title="@string/mediaButtonName"
		android:disableDependentsState="false"
		android:summaryOff="@string/mediaButtonOff"
		android:summaryOn="@string/mediaButtonOn"
	></CheckBoxPreference>
	<CheckBoxPreference
		android:key="KillServiceEnable"
	    android:title="@string/KillServiceName"
		android:disableDependentsState="false"
		android:summaryOff="@string/KillServiceNameOffSummary"
		android:summaryOn="@string/KillServiceNameOnSummary"
	></CheckBoxPreference>
	
	        
</PreferenceScreen>